jib update